# tinyHttpServer

./: .gitignore  CMakeLists.txt  HttpHandle.cpp  HttpHandle.h  HttpServer.cpp  HttpServer.h  MySoket.cpp  MySoket.h  MysqlHelper.cpp  MysqlHelper.h  README.md  server_main.cpp  table_baidu.sql
log/: Logger.cpp  Logger.h
www/: default.html  handlepost.html  index.html  post.html  postReply.html  templet.html
